nhatv- fix footer jump

--- a/client/src/app/contact/contact.component.css
+++ b/client/src/app/contact/contact.component.css
@@ -1,4 +1,20 @@
 
+@media screen and (max-width: 4000px) and (min-width:2000px) {
+  .container{
+    height: 100%;
+}
+  .map{
+    padding-top: 2em;
+    padding-bottom: 40em;
+  }
+} 
+
+
+/* .container{
+  height: 100vh;
+  align-content: center;
+  } */
+
 
 h1 {
   font-family: 'Source Sans Pro', sans-serif; 
