--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,3 +1,4 @@
+
 .banner{
     background-image: url('https://c.wallhere.com/photos/83/e8/lajolla_sunset_beach_sealion_sea_lion_sandiego_clouds-872451.jpg!d');
     background-size: cover;
@@ -9,7 +10,7 @@
     }
     
     .container{
-    height: 650px;
+    height: 100vh;
     align-content: center;
     }
     
